# UniBa-Exams

./: .gitignore  CMakeLists.txt  README.md  esame_main.cpp  esame_test_main.cpp  lesson-07-03-24.py  lesson-07-05-24.py  lesson-09-05-24.py  lesson-12-03-24.py  lesson-14-05-24-linear-algebra.py  lesson-16-04-24-laplace.py  lesson-23-04-24-lu.py  lesson-30-04-24.py  main.cpp
ASD-Exam-Structures/: README.md
Algoritmi-E-Strutture-Dati/: CMakeLists.txt  README.md
Algoritmi-E-Strutture-Dati/ASD-Exam-Structures/: README.md
Algoritmi-E-Strutture-Dati/Algoritmi_Lab_1/: ex1.c  testo.txt
Algoritmi-E-Strutture-Dati/Algoritmi_Lab_4/: esame.h  studente.cpp  test_esame.cpp  testo4.txt
Algoritmi-E-Strutture-Dati/Algoritmi_Lab_6/: coda.h  testo.txt
Algoritmi-E-Strutture-Dati/Esame/: info.txt  prova_lab_1.cpp  prova_lab_3.cpp  prova_lab_4.cpp
Algoritmi-E-Strutture-Dati/Lezioni/: lezione_09-11-23.cpp  lezione_12-12-23.cpp  lezione_14-12-23.cpp  lezione_19-10-23.cpp  lezione_30-11-23.cpp  lezione_5-10-23.cpp
Algoritmi_Lab_1/: ex1  ex1.c  lezione_5-10-23  test  test.cpp
Algoritmi_Lab_2/: provastudente.cpp  studente  studente.cpp  studente.h  testo.txt
Algoritmi_Lab_2/v1/: corso.cpp  corso.h  provastudente.cpp  studente.cpp
Algoritmi_Lab_2/v2/: provastudente.cpp  studente.cpp  studente.h
Algoritmi_Lab_3/: TestMatrice.cpp  matrice.cpp  matrice.h  testo.txt
Algoritmi_Lab_3/v1/: TestMatrice.cpp  matrice.cpp
Algoritmi_Lab_3/v2/: TestMatrice.cpp  matrice.cpp  matrice.h
Algoritmi_Lab_4/: esame.cpp  esame.h  studente.cpp  studente.h  test_esame.cpp  test_studente.cpp
Algoritmi_Lab_5/: list_operations.cpp  list_operations.h  test_liste.cpp  testo.txt
Algoritmi_Lab_6/: coda.cpp  ex.cpp  ex1.cpp
Algoritmi_Lab_7/: testo.txt
Calcolabilita-E-Complessita/: README.md
Calcolabilita-E-Complessita/JFlap/: ex-prova-itinere.jff  ex3.jff  exam.jff  lesson-12-03-24-ex2.jff  lesson-12-03-24.jff  lesson-22-04-24-turing.jff
Calcolo-Numerico/: README.md  bisezioni.m  bisezioni2.m  lesson-02-05-24.py  lesson-09-05-24.py  lesson-12-03-24.py  lesson-14-05-24-interpolation.py  lesson-16-05-24.py
Calcolo-Numerico/ex/: ex-elimination-gauss.py
Esame/: info.txt  prova_lab_2.cpp
JFlap/: ex-TM-1.jff  ex-rewrite-turing.jff  lesson-07-03-24.jff  lesson-12-03-24-ex3.jff  lesson-12-03-24-ex4.jff
JFlap/TM/: ex-TM-1.jff
Lezioni/: lezione_09_11_23.cpp  lezione_11-01-24.cpp  lezione_12-12-23.cpp  lezione_17-10-23  lezione_17-10-23.cpp  lezione_19-10-23.cpp  lezione_23-11-23.cpp  lezione_23_11_23.cpp  lezione_24-10-23.cpp  lezione_26-10-23.cpp  lezione_26_10_23.cpp  lezione_3-10-23.cpp  lezione_5-10-23.cpp
Strutture/: TestStrutture.cpp
exams/: e-04-04-13.py  e-11-04-12.py  e-20-11-14.py
matrix/: matrix.py
(+62 files in other folders)
